turmites.lessons.turmites.langton.Langton.scala.code
def step() {
  setCouleurSol(Color) = {
    setCouleurBrosse(Color)
    baisseBosse()
    leveBrosse()
  }
  
  setCouleurSol(Color.BLACK)
}